2015.05.14

real data sets where heuristic does not recover visually optimal
segmentations.

2015.05.05

Squared hinge loss FISTA implementation.

2015.04.17

Bugfixes for C memory issues.

2015.04.14

Fast C implementation of PeakSegJointHeuristic.

2015.04.02

binSum, multi* copied from tdhock/PeakSegDP.