@@ -1,3 +1,4 @@
+library(testthat)
 context("real data")
 
 library(PeakSegJoint)
@@ -348,6 +349,7 @@ test_that("21 peak loss < 20 peak loss", {
   zoom.peak.list <- list("0"=Peaks())
   zoom.loss.list <-
     list("0"=data.frame(peaks=0, loss=sum(flat.loss.vec)))
+  peaks.str <- "21"  
   for(peaks.str in names(best.indices.list)){
     loss.best <- best.indices.list[[peaks.str]]
     best.peak.df <- best.peak.list[[peaks.str]]
@@ -424,7 +426,14 @@ test_that("21 peak loss < 20 peak loss", {
           }
         }
       }
-      ##print(t(cumsum.mats$left$count[-1,]))
+      left.mat <- t(cumsum.mats$left$count[-1,])
+      colnames(left.mat) <- NULL
+      right.mat <- t(cumsum.mats$right$count[-1,])
+      colnames(right.mat) <- NULL
+      print(bases.per.bin.zoom)
+      print(left.mat)
+      print(right.mat)
+      print(as.integer(cumsum.mats$right$count[1,]))
       possible.grid <- 
         expand.grid(left.cumsum.row=3:n.cumsum, right.cumsum.row=2:n.cumsum)
       possible.grid$left.chromStart <-
@@ -527,6 +536,7 @@ test_that("21 peak loss < 20 peak loss", {
       }
       ## Plot the segment means as a reality check.
       seg.df <- do.call(rbind, seg.list)
+      segPlot <- 
       ggplot()+
         geom_step(aes(chromStart/1e3, count),
                   data=data.frame(sub.norm.df, what="data"),
@@ -550,6 +560,7 @@ test_that("21 peak loss < 20 peak loss", {
         geom_point(aes(with.without.loss, total.loss),
                    data=model.df)
 
+      binPlot <- 
       ggplot()+
         xlab("position on chromosome (kilobases = kb)")+
         scale_y_continuous("", breaks=NULL)+
@@ -586,6 +597,9 @@ test_that("21 peak loss < 20 peak loss", {
 
       peakStart <- best.model$left.chromStart
       peakEnd <- best.model$right.chromEnd
+      cat(sprintf("\nn_peaks=%s bases_per_bin=%d [%d,%d] loss=%15.6f\n",
+                  peaks.str, bases.per.bin.zoom,
+                  peakStart, peakEnd, best.model$total.loss))
       before.i.list <-
         list(left=best.model$left.cumsum.row-2,
              right=best.model$right.cumsum.row-1)
@@ -667,7 +681,7 @@ test_that("21 peak loss < 20 peak loss", {
     zoom.peak.list[[peaks.str]] <-
       data.frame(peaks, sample.id=samples.with.peaks,
                  chromStart=peakStart, chromEnd=peakEnd)
-  }
+  }#peaks.str
   zoom.peaks <- do.call(rbind, zoom.peak.list)
   zoom.loss <- do.call(rbind, zoom.loss.list)
   R.loss.vec <- as.numeric(zoom.loss$loss)
